fixes windows covering

--- a/src/renderer/assets/less/4_components/identity-registration.less
+++ b/src/renderer/assets/less/4_components/identity-registration.less
@@ -57,6 +57,7 @@
 }
 
 #registration-instructions {
+  left: auto;
   right: 0;
 
   .nav__content {
